--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <!-- 引入 echarts.js -->
     <script src="echarts.min.js"></script>
-<script src="https://d3js.org/d3.v5.min.js"></script>
+<script type="text/javascript" src="https://d3js.org/d3.v4.min.js"></script>
+
+		<style type="text/css">
+			/* No style rules here yet */		
+		</style>
 </head>
 
 <body class="is-preload">
