--- a/index.html
+++ b/index.html
@@ -427,6 +427,11 @@
                 </br>
                 <div class="row">
                     <style>
+			    /*
+.chart rect {
+  fill: steelblue;
+}
+*/
                         .chart .legend {
                             fill: black;
                             font: 14px sans-serif;
