--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             </script>
                         </div>
                         <div class="col-md-9">
-                            <div id="ice" style="height: 105% ; width: 590%"></div>
+                            <div id="ice" style="height: 105% ; width: 560%"></div>
                             <script type="text/javascript">
                                 var dom = document.getElementById("ice");
                                 var myChart = echarts.init(dom);
@@ -224,8 +224,8 @@
                                 option = {
 
                                     title: {
-                                        text: 'Top five categories of US exports to China (2017, USD billion)',
-                                        subtext: 'Source: US Census Bureau'
+                                        text: 'Top five categories of US exports to China (USD bn)',
+                                        subtext: 'Source: US Census Bureau (2017)'
                                     },
 
                                     tooltip: {
