--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                             </script>
                         </div>
                         <div class="col-md-3">
-                            <div id="moon" style="height: 85%; width:420%"></div>
+                            <div id="moon" style="height: 85%; width:400%"></div>
                             <script type="text/javascript">
                                 var dom = document.getElementById("moon");
                                 var myChart = echarts.init(dom);
@@ -705,8 +705,8 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top soybean producing US states (2017, USD million)',
-                                        subtext: 'Source: US Departmnet of Agriculture'
+                                        text: 'Top soybean producing US states (USD mn)',
+                                        subtext: 'Source: US Departmnet of Agriculture (2017)'
                                     },
                                     tooltip: {
                                         trigger: 'axis',
