--- a/index.html
+++ b/index.html
@@ -1511,7 +1511,7 @@
                             </script>
                         </div>
                         <div class="col-md-9">
-                            <div id="lemon" style="height: 100% ; width:450%"></div>
+                            <div id="lemon" style="height: 100% ; width:470%"></div>
                             <script type="text/javascript">
                                 var dom = document.getElementById("lemon");
                                 var myChart = echarts.init(dom);
@@ -1575,8 +1575,8 @@
                                 option = {
 
                                     title: {
-                                        text: 'US- Top foreign inputs providers(2011, % of share)',
-                                        subtext: 'Source: World Trade Organisation'
+                                        text: 'US- Top foreign inputs providers(% of share)',
+                                        subtext: 'Source: World Trade Organisation (2011)'
                                     },
 
                                     tooltip: {
@@ -1623,8 +1623,8 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (2011, % of share)',
-                                        subtext: 'Source: World Trade Organization'
+                                        text: 'Top foreign services providers to total exports (% of share)',
+                                        subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
                                         trigger: 'axis',
@@ -1727,7 +1727,7 @@
                             </script>
                         </div>
                         <div class="col-md-9">
-                            <div id="grape" style="height: 100% ; width:600%"></div>
+                            <div id="grape" style="height: 100% ; width:450%"></div>
                             <script type="text/javascript">
                                 var dom = document.getElementById("grape");
                                 var myChart = echarts.init(dom);
@@ -1737,8 +1737,8 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top exporters of China inputs through GVCs(2011, % of share)',
-                                        subtext: 'Source: World Trade Organization'
+                                        text: 'Top exporters of China inputs through GVCs(% of share)',
+                                        subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
                                         trigger: 'axis',
@@ -1828,7 +1828,7 @@
                             </script>
                         </div>
                         <div class="col-md-9">
-                            <div id="muffin" style="height: 100% ; width:600%"></div>
+                            <div id="muffin" style="height: 100% ; width:450%"></div>
                             <script type="text/javascript">
                                 var dom = document.getElementById("muffin");
                                 var myChart = echarts.init(dom);
@@ -1838,8 +1838,8 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (2011, % of share)',
-                                        subtext: 'Source: World Trade Organization'
+                                        text: 'Top foreign services providers to total exports (% of share)',
+                                        subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
                                         trigger: 'axis',
