--- a/index.html
+++ b/index.html
@@ -1521,8 +1521,8 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top exporters of US inputs through GVCs(2011, % of share)',
-                                        subtext: 'Source: World Trade Organization'
+                                        text: 'Top exporters of US inputs through GVCs(% of share)',
+                                        subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
                                         trigger: 'axis',
@@ -1575,8 +1575,8 @@
                                 option = {
 
                                     title: {
-                                        text: 'US- Top foreign inputs providers(% of share)',
-                                        subtext: 'Source: World Trade Organisation (2011)'
+                                        text: 'US- Top foreign inputs providers(2011, % of share)',
+                                        subtext: 'Source: World Trade Organisation'
                                     },
 
                                     tooltip: {
