--- a/index.html
+++ b/index.html
@@ -1521,7 +1521,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top exporters of US inputs through GVCs(% of share)',
+                                        text: 'Top exporters of US inputs through GVCs(%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
@@ -1623,7 +1623,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (% of share)',
+                                        text: 'Top foreign services providers to total exports (%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
@@ -1737,7 +1737,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top exporters of China inputs through GVCs(% of share)',
+                                        text: 'Top exporters of China inputs through GVCs(%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
@@ -1838,7 +1838,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (% of share)',
+                                        text: 'Top foreign services providers to total exports (%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
