--- a/index.html
+++ b/index.html
@@ -1623,7 +1623,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (%)',
+                                        text: 'Top foreign services providers to exports (%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
@@ -1838,7 +1838,7 @@
 
                                 option = {
                                     title: {
-                                        text: 'Top foreign services providers to total exports (%)',
+                                        text: 'Top foreign services providers to exports (%)',
                                         subtext: 'Source: World Trade Organization (2011)'
                                     },
                                     tooltip: {
