--- a/index.html
+++ b/index.html
@@ -28,23 +28,14 @@
         </nav>
     </header>
 
-    <!-- Nav -->
-    <nav id="menu">
-        <ul class="links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="elements.html">Elements</a></li>
-            <li><a href="generic.html">Generic</a></li>
-        </ul>
-    </nav>
-
+ 
     <!-- Banner -->
     <section id="banner">
         <div class="inner">
             <center>
-                <h1>Sino-China Trade War</h1>
+                <h1>Sino-US Trade War</h1>
                 </br>
-                <p>What harms will be done to both countries?</p>
-                <p></p>
+                
             </center>
         </div>
         <video autoplay loop muted playsinline src="images/banner.mp4"></video>
