--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Header -->
     <header id="header">
-        <a class="logo" href="index.html">Industrious</a>
+        <a class="logo" href="index.html"></a>
         <nav>
             <a href="#menu">Menu</a>
         </nav>
